--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Counter React</title>
+        <title>Count Reactor</title>
     </head>
     <body>
 
@@ -18,14 +18,14 @@
                 render() {
                     return (
                         <div>
-                        <h2>Hello Nigs</h2>
+                        <h2>Yooo {this.props.name}</h2>
                         </div>
                     );
                 }
             }
 
             ReactDOM.render(
-                <Greeting />, document.getElementById('app')
+                <Greeting name="Dude"/>, document.getElementById('app')
             );
 
         </script>
