--- a/counter.html
+++ b/counter.html
@@ -16,11 +16,25 @@
 
             class Counter extends React.Component {
 
+                // initializes 'state' in constructor() func.
                 constructor(props){
                     super(props);
                     this.state = {
                         number: 1
                     }
+                }
+
+                // state changes: increment/decrement week #
+                increment(event) {
+                    this.setState({
+                        number: this.state.number + 1
+                    })
+                }
+
+                decrement(event) {
+                    this.setState({
+                        number: Math.max(1, this.state.number -1)
+                    })
                 }
 
                 render() {
@@ -30,6 +44,9 @@
                             <img src={this.props.image} alt="Logo" />
                             <h2>Program: {this.props.label}</h2>
                             <h3>Week: {this.state.number}</h3>
+
+                            <button onClick={this.increment.bind(this)}>Increase</button>
+                            <button onClick={this.decrement.bind(this)}>Decrease</button>
                             <p>
                                 Date: {this.props.date.toLocaleDateString()}
                             </p>
